Incorporate memory limiting agent.